# easytray

./: README.md  StatusNotifierItem.py  ed_icon.rgba  fast_tray.py  pyproject.toml  sdbus_server_and_client.py
dbus_backends/: __init__.py
dbus_backends/dasbus_backend/: __init__.py
dbus_backends/dbusfast_backend/: easy_tray_fast.py  fast_tray.py
dbus_backends/sdbus_backend/: README.md  StatusNotifierWatcher.py  sdbus_server_and_client.py
easytray/: __init__.py  __main__.py  easytray.py  menu.py
easytray/dbus_backends/: __init__.py  tray_abc.py  utils.py
easytray/dbus_backends/dasbus_backend/: __init__.py  dasbus_tray_model.py
easytray/dbus_backends/dbusfast_backend/: fast_tray_sync.py
easytray/dbus_backends/sdbus_backend/: DbusMenu.py  StatusNotifierItem.py  sdbus_client.py
tests/: test_utils.py
tray_dasbus/: easy_tray_dasbus.py  tray_icon_model.py
tray_fast_bus/: easy_tray_fast.py  fast_tray.py  fast_tray_sync.py
tray_sdbus/: DbusMenu.py  StatusNotifierItem.py  StatusNotifierWatcher.py  sdbus_client.py
